# flexoki-py

./: .gitignore  README.md  pyproject.toml
docs/: colors.ipynb  filters.ipynb  matplotlib.ipynb  palettes.ipynb  theme.ipynb
flexoki/: __init__.py  core.py  utils.py
