[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexoki"
version = "0.1"
authors = [
  { name="David Moss", email="davidmoss1221@gmail.com" },
]
description = "A version of the Flexoki color scheme that works with matplotlib and other python visualization packages"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.9.0",
]

[tool.setuptools.packages.find]
exclude = ["ref*"]

[project.urls]
"Homepage" = "https://github.com/moss-xyz/matplotlib-map-utils/"
"Bug Tracker" = "https://github.com/moss-xyz/matplotlib-map-utils/issues"
